--- a/spongzi-common/pom.xml
+++ b/spongzi-common/pom.xml
@@ -9,6 +9,8 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+    <packaging>pom</packaging>
+
     <artifactId>spongzi-common</artifactId>
 
     <properties>
