--- a/spongzi-user/src/main/resources/application.yml
+++ b/spongzi-user/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 8080
+spring:
+  datasource:
+    name: root
+    password: root
+    url: jdbc:mysql://120.24.188.168:3306/spongzi_frame?serverTimeZone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      initial-size: 20
+      min-idle: 10
+      max-active: 100
+      max-wait: 60000
