--- a/spongzi-user/src/main/resources/application.yml
+++ b/spongzi-user/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    name: root
+    username: root
     password: root
     url: jdbc:mysql://120.24.188.168:3306/spongzi_frame?serverTimeZone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
