--- a/spongzi-user/src/main/resources/application.yml
+++ b/spongzi-user/src/main/resources/application.yml
@@ -12,3 +12,15 @@ spring:
       min-idle: 10
       max-active: 100
       max-wait: 60000
+      stat-view-servlet:
+        enabled: true
+        url-pattern: /druid/*
+        login-username: admin
+        login-password: admin
+      filter:
+        stat:
+          enabled: true
+          log-slow-sql: true
+          slow-sql-millis: 2000
+        wall:
+          enabled: true
