--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>spongzi-common</module>
         <module>spongzi-common/spongzi-common-web</module>
         <module>spongzi-common/spongzi-common-mybatisplus</module>
+        <module>spongzi-common/spongzi-common-redis</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
@@ -44,6 +45,11 @@
         <dependency>
             <groupId>com.spongzi</groupId>
             <artifactId>spongzi-common-swagger</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.spongzi</groupId>
+            <artifactId>spongzi-common-redis</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
