--- a/spongzi-common/spongzi-common-redis/pom.xml
+++ b/spongzi-common/spongzi-common-redis/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
 
 </project>
