--- a/spongzi-common/spongzi-common-swagger/pom.xml
+++ b/spongzi-common/spongzi-common-swagger/pom.xml
@@ -2,9 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.spongzi</groupId>
+    <parent>
+        <groupId>com.spongzi</groupId>
+        <artifactId>spongzi-common</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>spongzi-common-swagger</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
@@ -18,17 +23,14 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>2.4.2</version>
         </dependency>
     </dependencies>
 
