--- a/spongzi-dependencies/pom.xml
+++ b/spongzi-dependencies/pom.xml
@@ -136,16 +136,16 @@
                 <version>${swagger.version}</version>
             </dependency>
             <!-- knife4j -->
-<!--            <dependency>-->
-<!--                <groupId>com.github.xiaoymin</groupId>-->
-<!--                <artifactId>knife4j-spring-boot-starter</artifactId>-->
-<!--                <version>${knife4j.version}</version>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>com.github.xiaoymin</groupId>-->
-<!--                <artifactId>swagger-bootstrap-ui</artifactId>-->
-<!--                <version>${swagger.bootstrap.ui.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.github.xiaoymin</groupId>-->
+            <!--                <artifactId>knife4j-spring-boot-starter</artifactId>-->
+            <!--                <version>${knife4j.version}</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.github.xiaoymin</groupId>-->
+            <!--                <artifactId>swagger-bootstrap-ui</artifactId>-->
+            <!--                <version>${swagger.bootstrap.ui.version}</version>-->
+            <!--            </dependency>-->
             <!-- spring-autoconfigure -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -210,30 +210,30 @@
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
             </dependency>
-            <!-- spring-boot-starter-aop -->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-aop</artifactId>-->
-<!--                <version>${spring.aop.version}</version>-->
-<!--            </dependency>-->
-            <!-- gson -->
+            <!--spring-boot-starter-aop-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>${spring.aop.version}</version>
+            </dependency>
+            <!--gson-->
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${gson.version}</version>
             </dependency>
             <!-- freemarker -->
-<!--            <dependency>-->
-<!--                <groupId>org.freemarker</groupId>-->
-<!--                <artifactId>freemarker</artifactId>-->
-<!--                <version>${freemarker.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.freemarker</groupId>-->
+            <!--                <artifactId>freemarker</artifactId>-->
+            <!--                <version>${freemarker.version}</version>-->
+            <!--            </dependency>-->
             <!-- pinyin4j -->
-<!--            <dependency>-->
-<!--                <groupId>com.belerweb</groupId>-->
-<!--                <artifactId>pinyin4j</artifactId>-->
-<!--                <version>${pinyin4j.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.belerweb</groupId>-->
+            <!--                <artifactId>pinyin4j</artifactId>-->
+            <!--                <version>${pinyin4j.version}</version>-->
+            <!--            </dependency>-->
             <!-- guava -->
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -247,17 +247,17 @@
                 <version>${fastjson.version}</version>
             </dependency>
             <!-- spring-boot-starter-websocket -->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-websocket</artifactId>-->
-<!--                <version>${spring.websocket.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter-websocket</artifactId>-->
+            <!--                <version>${spring.websocket.version}</version>-->
+            <!--            </dependency>-->
             <!-- httpclient5 -->
-<!--            <dependency>-->
-<!--                <groupId>org.apache.httpcomponents.client5</groupId>-->
-<!--                <artifactId>httpclient5</artifactId>-->
-<!--                <version>${http.client.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.apache.httpcomponents.client5</groupId>-->
+            <!--                <artifactId>httpclient5</artifactId>-->
+            <!--                <version>${http.client.version}</version>-->
+            <!--            </dependency>-->
             <!-- springBootTest -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -265,78 +265,78 @@
                 <version>${spring.boot.test.version}</version>
             </dependency>
             <!-- junit -->
-<!--            <dependency>-->
-<!--                <groupId>junit</groupId>-->
-<!--                <artifactId>junit</artifactId>-->
-<!--                <version>${junit.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>junit</groupId>-->
+            <!--                <artifactId>junit</artifactId>-->
+            <!--                <version>${junit.version}</version>-->
+            <!--            </dependency>-->
             <!-- archunit -->
-<!--            <dependency>-->
-<!--                <groupId>com.tngtech.archunit</groupId>-->
-<!--                <artifactId>archunit-junit4</artifactId>-->
-<!--                <version>${archunit.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.tngtech.archunit</groupId>-->
+            <!--                <artifactId>archunit-junit4</artifactId>-->
+            <!--                <version>${archunit.version}</version>-->
+            <!--            </dependency>-->
 
             <!-- xxljob -->
-<!--            <dependency>-->
-<!--                <groupId>com.xuxueli</groupId>-->
-<!--                <artifactId>xxl-job-core</artifactId>-->
-<!--                <version>${xxl.job.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.xuxueli</groupId>-->
+            <!--                <artifactId>xxl-job-core</artifactId>-->
+            <!--                <version>${xxl.job.version}</version>-->
+            <!--            </dependency>-->
             <!-- easyexcel -->
-<!--            <dependency>-->
-<!--                <groupId>com.alibaba</groupId>-->
-<!--                <artifactId>easyexcel</artifactId>-->
-<!--                <version>${easyexcel.version}</version>-->
-<!--            </dependency>-->
-<!--            &lt;!&ndash; poi &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>org.apache.poi</groupId>-->
-<!--                <artifactId>poi-ooxml</artifactId>-->
-<!--                <version>${poi.version}</version>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>org.apache.poi</groupId>-->
-<!--                <artifactId>poi</artifactId>-->
-<!--                <version>${poi.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.alibaba</groupId>-->
+            <!--                <artifactId>easyexcel</artifactId>-->
+            <!--                <version>${easyexcel.version}</version>-->
+            <!--            </dependency>-->
+            <!--            &lt;!&ndash; poi &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.apache.poi</groupId>-->
+            <!--                <artifactId>poi-ooxml</artifactId>-->
+            <!--                <version>${poi.version}</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.apache.poi</groupId>-->
+            <!--                <artifactId>poi</artifactId>-->
+            <!--                <version>${poi.version}</version>-->
+            <!--            </dependency>-->
 
-<!--            &lt;!&ndash;aliyunOSS&ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>com.aliyun.oss</groupId>-->
-<!--                <artifactId>aliyun-sdk-oss</artifactId>-->
-<!--                <version>${oss.version}</version>-->
-<!--            </dependency>-->
+            <!--            &lt;!&ndash;aliyunOSS&ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.aliyun.oss</groupId>-->
+            <!--                <artifactId>aliyun-sdk-oss</artifactId>-->
+            <!--                <version>${oss.version}</version>-->
+            <!--            </dependency>-->
 
-<!--            &lt;!&ndash; 邮件 &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>com.sun.mail</groupId>-->
-<!--                <artifactId>javax.mail</artifactId>-->
-<!--                <version>${javax.mail.version}</version>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>org.hibernate</groupId>-->
-<!--                <artifactId>hibernate-validator</artifactId>-->
-<!--                <version>${hiberante.validator.version}</version>-->
-<!--            </dependency>-->
-<!--            &lt;!&ndash; mongodb &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-data-mongodb</artifactId>-->
-<!--                <version>${mongodb.version}</version>-->
-<!--            </dependency>-->
-<!--            &lt;!&ndash; RocketMQ &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>org.apache.rocketmq</groupId>-->
-<!--                <artifactId>rocketmq-spring-boot-starter</artifactId>-->
-<!--                <version>${rocketmq.version}</version>-->
-<!--            </dependency>-->
-<!--            &lt;!&ndash; RabbitMQ &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-amqp</artifactId>-->
-<!--                <version>${rabbitmq.version}</version>-->
-<!--            </dependency>-->
+            <!--            &lt;!&ndash; 邮件 &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.sun.mail</groupId>-->
+            <!--                <artifactId>javax.mail</artifactId>-->
+            <!--                <version>${javax.mail.version}</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.hibernate</groupId>-->
+            <!--                <artifactId>hibernate-validator</artifactId>-->
+            <!--                <version>${hiberante.validator.version}</version>-->
+            <!--            </dependency>-->
+            <!--            &lt;!&ndash; mongodb &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter-data-mongodb</artifactId>-->
+            <!--                <version>${mongodb.version}</version>-->
+            <!--            </dependency>-->
+            <!--            &lt;!&ndash; RocketMQ &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.apache.rocketmq</groupId>-->
+            <!--                <artifactId>rocketmq-spring-boot-starter</artifactId>-->
+            <!--                <version>${rocketmq.version}</version>-->
+            <!--            </dependency>-->
+            <!--            &lt;!&ndash; RabbitMQ &ndash;&gt;-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter-amqp</artifactId>-->
+            <!--                <version>${rabbitmq.version}</version>-->
+            <!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
