fate：添加freemarker模块导出doc

--- a/spongzi-dependencies/pom.xml
+++ b/spongzi-dependencies/pom.xml
@@ -223,11 +223,11 @@
                 <version>${gson.version}</version>
             </dependency>
             <!-- freemarker -->
-            <!--            <dependency>-->
-            <!--                <groupId>org.freemarker</groupId>-->
-            <!--                <artifactId>freemarker</artifactId>-->
-            <!--                <version>${freemarker.version}</version>-->
-            <!--            </dependency>-->
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker.version}</version>
+            </dependency>
             <!-- pinyin4j -->
             <!--            <dependency>-->
             <!--                <groupId>com.belerweb</groupId>-->
