--- a/spongzi-common/pom.xml
+++ b/spongzi-common/pom.xml
@@ -19,6 +19,7 @@
         <module>spongzi-common-web</module>
         <module>spongzi-common-log</module>
         <module>spongzi-common-starter</module>
+        <module>spongzi-common-tool</module>
     </modules>
 
 
