--- a/spongzi-dependencies/pom.xml
+++ b/spongzi-dependencies/pom.xml
@@ -229,11 +229,11 @@
                 <version>${freemarker.version}</version>
             </dependency>
             <!-- pinyin4j -->
-            <!--            <dependency>-->
-            <!--                <groupId>com.belerweb</groupId>-->
-            <!--                <artifactId>pinyin4j</artifactId>-->
-            <!--                <version>${pinyin4j.version}</version>-->
-            <!--            </dependency>-->
+            <dependency>
+                <groupId>com.belerweb</groupId>
+                <artifactId>pinyin4j</artifactId>
+                <version>${pinyin4j.version}</version>
+            </dependency>
             <!-- guava -->
             <dependency>
                 <groupId>com.google.guava</groupId>
