--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>spongzi-user</module>
+        <module>spongzi-demo</module>
         <module>spongzi-common</module>
         <module>spongzi-dependencies</module>
     </modules>
