--- a/spongzi-dependencies/pom.xml
+++ b/spongzi-dependencies/pom.xml
@@ -247,11 +247,11 @@
                 <version>${fastjson.version}</version>
             </dependency>
             <!-- spring-boot-starter-websocket -->
-            <!--            <dependency>-->
-            <!--                <groupId>org.springframework.boot</groupId>-->
-            <!--                <artifactId>spring-boot-starter-websocket</artifactId>-->
-            <!--                <version>${spring.websocket.version}</version>-->
-            <!--            </dependency>-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-websocket</artifactId>
+                <version>${spring.websocket.version}</version>
+            </dependency>
             <!-- httpclient5 -->
             <!--            <dependency>-->
             <!--                <groupId>org.apache.httpcomponents.client5</groupId>-->
