--- a/spongzi-demo/src/main/resources/application.yml
+++ b/spongzi-demo/src/main/resources/application.yml
@@ -1,67 +1,3 @@
-server:
-  port: 8080
 spring:
-  datasource:
-    username: root
-    password: root
-    url: jdbc:mysql://120.24.188.168:3306/spongzi_frame?serverTimeZone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      initial-size: 20
-      min-idle: 10
-      max-active: 100
-      max-wait: 60000
-      stat-view-servlet:
-        enabled: true
-        url-pattern: /druid/*
-        login-username: admin
-        login-password: admin
-      filter:
-        stat:
-          enabled: true
-          log-slow-sql: true
-          slow-sql-millis: 2000
-        wall:
-          enabled: true
-  redis:
-    host: 120.24.188.168
-    port: 6379
-    password: spongzi
-    database: 0
-    timeout: 10000
-    lettuce:
-      pool:
-        max-active: 8
-        max-idle: 8
-        max-wait: 10000
-        min-idle: 0
-# 是否开启sql优化器
-sql:
-  beauty:
-    show: true
-
-# mybait plus 相关配置
-mybatis-plus:
-  mapper-locations: classpath:mapper/*.xml
-  global-config:
-    db-config:
-      logic-delete-value: 1
-      logic-not-delete-value: 0
-
-swagger:
-  base-package: com.spongzi
-  title: spongzi-frame
-  contact-name: spongzi
-  description: 从0到1开箱即用
-  version: 1.0.0
-  url: 地址
-  email: spongziw@163.com
-logging:
-  config: classpath:log4j2-spring.xml
-log:
-  aspect:
-    enable: true
-guava:
-  cache:
-    switch: true
+  profiles:
+    active: ${env-flag}
