--- a/spongzi-common/spongzi-common-tool/pom.xml
+++ b/spongzi-common/spongzi-common-tool/pom.xml
@@ -24,6 +24,10 @@
             <groupId>com.belerweb</groupId>
             <artifactId>pinyin4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
