--- a/spongzi-dependencies/pom.xml
+++ b/spongzi-dependencies/pom.xml
@@ -253,12 +253,12 @@
                 <version>${spring.websocket.version}</version>
             </dependency>
             <!-- httpclient5 -->
-            <!--            <dependency>-->
-            <!--                <groupId>org.apache.httpcomponents.client5</groupId>-->
-            <!--                <artifactId>httpclient5</artifactId>-->
-            <!--                <version>${http.client.version}</version>-->
-            <!--            </dependency>-->
-            <!-- springBootTest -->
+            <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>${http.client.version}</version>
+            </dependency>
+            <!--springBootTest-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
